fixed overflowing dice bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: #0b2434;
-  padding: 30px;
+  padding: 15px;
   overflow: hidden;
 }
 
@@ -8,7 +8,6 @@ main {
   background-color: white;
   height: 80vh;
   width: 100%;
-
   border-radius: 25px;
   display: flex;
   flex-direction: column;
@@ -18,8 +17,8 @@ main {
 
 .dice-container {
   display: grid;
-  grid-template-columns: repeat(5, 50px);
-  grid-template-rows: 50px 50px;
+  grid-template-columns: repeat(5, 40px);
+  grid-template-rows: 45px 45px;
   gap: 20px;
 }
 
